Get word from array in Scripts

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Dangman</title>
   </head>
   <body>
+    <button id='start' type="submit">Submit</button>
     <header>heada</header>
     <main>Main</main>
     <footer>foota</footer>
