--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <header>heada</header>
     <main>Main</main>
     <footer>foota</footer>
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
     <script src="./scripts/scripts.js"></script>
   </body>
 </html>
