replaced prompt with input field

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <button id="start" type="submit">Start!</button>
         <div id="gamedashes"></div>
       </div>
+      <p>Enter letter guess here.</p>
+      <input id="user-letter-choice" type="text" maxlength="1" onkeypress="return /[a-z]/i.test(event.key)" />
     </main>
     <footer>
       <p>Created by Jeremy Mark & Katy Cassidy</p>
